<resources>
    <string name="app_name">CoinConverter</string>
    <string name="value">Valor</string>
    <string name="convert_from">Converter de:</string>
    <string name="To">Para:</string>
    <string name="convert">Converter</string>
    <string name="result">5,27</string>
    <string name="historic_value">R$ 25,90</string>
    <string name="coin1_to_coin2">Dólar Americano/Real Brasileiro</string>
    <string name="history">Historico</string>
    <string name="save">Salvar</string>
    <string name="delete_historic">Limpar Histórico</string>
    <string name="symbol_project">Logo do projeto</string>
    <string name="coin_converter_splash">CoinConverter</string>
</resources>